; ModuleID = '/home/carl/AnghaBench/How-to-Make-a-Computer-Operating-System/src/sdk/src/libc/src/sys/extr_select.c_select.c'
source_filename = "/home/carl/AnghaBench/How-to-Make-a-Computer-Operating-System/src/sdk/src/libc/src/sys/extr_select.c_select.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.timeval = type { i32 }

@SYS_select = common dso_local global i32 0, align 4
@errno = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @select(i32 %0, i32* %1, i32* %2, i32* %3, %struct.timeval* %4) #0 {
  %6 = alloca i32, align 4
  %7 = alloca i32, align 4
  %8 = alloca i32*, align 8
  %9 = alloca i32*, align 8
  %10 = alloca i32*, align 8
  %11 = alloca %struct.timeval*, align 8
  %12 = alloca i32, align 4
  store i32 %0, i32* %7, align 4
  store i32* %1, i32** %8, align 8
  store i32* %2, i32** %9, align 8
  store i32* %3, i32** %10, align 8
  store %struct.timeval* %4, %struct.timeval** %11, align 8
  %13 = load i32, i32* @SYS_select, align 4
  %14 = load i32, i32* %7, align 4
  %15 = load i32*, i32** %8, align 8
  %16 = ptrtoint i32* %15 to i32
  %17 = load i32*, i32** %9, align 8
  %18 = ptrtoint i32* %17 to i32
  %19 = load i32*, i32** %10, align 8
  %20 = ptrtoint i32* %19 to i32
  %21 = load %struct.timeval*, %struct.timeval** %11, align 8
  %22 = ptrtoint %struct.timeval* %21 to i32
  %23 = call i32 @syscall5(i32 %13, i32 %14, i32 %16, i32 %18, i32 %20, i32 %22)
  store i32 %23, i32* %12, align 4
  %24 = load i32, i32* %12, align 4
  %25 = icmp slt i32 %24, 0
  br i1 %25, label %26, label %29

26:                                               ; preds = %5
  %27 = load i32, i32* %12, align 4
  %28 = sub nsw i32 0, %27
  store i32 %28, i32* @errno, align 4
  store i32 -1, i32* %6, align 4
  br label %31

29:                                               ; preds = %5
  %30 = load i32, i32* %12, align 4
  store i32 %30, i32* %6, align 4
  br label %31

31:                                               ; preds = %29, %26
  %32 = load i32, i32* %6, align 4
  ret i32 %32
}

declare dso_local i32 @syscall5(i32, i32, i32, i32, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
